kubernets-local-vars/sitezao-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${project.name}-v${version.major}-web
spec:
  replicas: 1
  selector:
    matchLabels:
     app: ${project.name}-web
     version: v${version.major}-web

  template:
    metadata:
      labels:
        app: ${project.name}-web
        version: v${version.major}-web
    spec:
      containers:
      - name: ${project.name}-v${version.major}-web
        image: nginx:1.19-alpine
        command: ["/bin/sh"]
        args:
            - -c
            - |
              touch /usr/share/nginx/html/index.php;
              nginx -g "daemon off;"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: ${project.name}-v${version.major}-web-config
        resources:
          requests:
            memory: "100Mi"
            cpu: "140m"
          limits:
            memory: "128Mi"
            cpu: "150m"
      volumes:
        - name: ${project.name}-v${version.major}-web-config
          configMap:
            name: ${project.name}-v${version.major}-web # place ConfigMap `nginx-conf` on /etc/nginx
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${project.name}-v${version.major}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${project.name}
      version: v${version.major}

  template:
    metadata:
      labels:
        app: ${project.name}
        version: v${version.major}
    spec:
      containers:
      - name: ${project.name}-v${version.major}
        image: brunocaramelo/${project.imageRepository}:v${project.version}
        imagePullPolicy: Always
        command: ["/bin/sh"]
        args:
            - -c
            - |
              sleep 2;
              php artisan optimize;
              php artisan view:cache;
              php artisan migrate;
              mkdir /usr/share/nginx;
              ln -s /app/public /usr/share/nginx/html;
              php-fpm
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "200Mi"
            cpu: "555m"
          limits:
            memory: "250Mi"
            cpu: "600m"
---
apiVersion: v1
kind: Service
metadata:
  name: ${project.name}-v${version.major}-web
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 8088
    targetPort: 80
  selector:
   app: ${project.name}-web
---
apiVersion: v1
kind: Service
metadata:
  name: ${project.name}-v${version.major}-fpm
spec:
  type: ClusterIP
  ports:
  - port: 9000
  selector:
   app: ${project.name}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${project.name}-v${version.major}-queue
spec:
  replicas: 1
  selector:
    matchLabels:
     app: ${project.name}-queue
     version: v${version.major}-queue

  template:
    metadata:
      labels:
         app: ${project.name}-queue
         version: v${version.major}-queue
    spec:
      containers:
      - name: ${project.name}-queue
        image: brunocaramelo/${project.imageRepository}:v${project.version}
        imagePullPolicy: Always
        command: ["/bin/sh", "-c", "/usr/local/bin/php /app/artisan queue:work --verbose --tries=7 --timeout=90"]
