kubernets-local-vars/general-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${project.name}
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - ${domain}
      secretName: general-tls
  rules:
    - host: ${host}
      http:
        paths:
        - backend:
            serviceName: ${project.name}-v${version.major}-web
            servicePort: 8088
